--- a/dailies/170315.html
+++ b/dailies/170315.html
@@ -97,8 +97,8 @@
     <script src="../libs/quicksettings_3_0.min.js"></script>
     <script>
         var date = 170315;
-        var desc = "description";
-        var issueNumber = 9999;
+        var desc = "Day -1 - The prologue";
+        var issueNumber = -1;
         setup(date, date - 1, date + 1, desc, issueNumber);
     </script>
 </body>
