--- a/dailies/170317.html
+++ b/dailies/170317.html
@@ -35,7 +35,7 @@
     <script src="../libs/quicksettings_3_0.min.js"></script>
     <script>
         var date = 170317;
-        var desc = "Ionic full immersion begins";
+        var desc = "Day 1 - Ionic full immersion begins";
         var issueNumber = 1;
         setup(date, date - 1, date + 1, desc, issueNumber);
     </script>
