--- a/dailies/170320.html
+++ b/dailies/170320.html
@@ -54,7 +54,7 @@
     <script src="../libs/quicksettings_3_0.min.js"></script>
     <script>
         var date = 170320;
-        var desc = "Fourth day Ionic of full immersion and a few readings";
+        var desc = "Fourth day of Ionic full immersion and a few readings";
         var issueNumber = 4;
         setup(date, date - 1, date + 1, desc, issueNumber);
     </script>
