--- a/dailies/170331.html
+++ b/dailies/170331.html
@@ -32,7 +32,7 @@
         var date = 170331;
         var desc = "Ionic Academy: How To Use Cordova Plugins With Ionic 2";
         var issueNumber = 15;
-        setup(date, date - 1, date + 1, desc, issueNumber);
+        setup(date, date - 1, 170401, desc, issueNumber);
     </script>
 </body>
 
