marked.js issue
Fixed issue

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script src="js/History.js"></script>
     <script src="js/Calendar.js"></script>
 </head>
-<body>
-    <div class="content">
+<body><div id="content"></div>
+            
         <h1>max-devjs xxx-days-of-code</h1>
         <hr>
         <!--<p><a href="thumbs.html">Thumbnails</a> | <a href="#" id="clearHistoryBtn">Clear History</a> </p>-->
